fix settings window dimensions and notifier being cut off

--- a/src/renderer/components/Messenger/Messenger.module.scss
+++ b/src/renderer/components/Messenger/Messenger.module.scss
@@ -6,6 +6,8 @@
   height: 480px;
   max-height: 480px;
   background: #ffffff;
+  border-radius: 8px;
+  overflow: hidden;
 
   .topWrapper {
     display: flex;
