--- a/src/renderer/components/Settings/Settings.module.scss
+++ b/src/renderer/components/Settings/Settings.module.scss
@@ -1,8 +1,10 @@
 .settingsWrapper {
-  width: 800px;
-  height: 480px;
+  width: 736px;
+  height: 448px;
   padding: 16px 32px;
   background-color: #ffffff;
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .buttonsWrapper {
